fix:button alignment change

--- a/src/components/HomePage/components/PopularRecipe/PopularRecipe.css
+++ b/src/components/HomePage/components/PopularRecipe/PopularRecipe.css
@@ -19,12 +19,15 @@
   .popular-recipe-text {
     margin-top: 150px;
     margin-right: 30px;
+    display: flex;
+    flex-direction: column;
   }
   .popular-recipe-btn2 {
     background-color: transparent !important;
   }
   .popular-recipe-btn {
-    margin-top: 110px !important;
+    /* margin-top: 110px !important; */
+    margin-top: auto !important;
   }
 }
 .popular-recipe-box {
@@ -73,7 +76,7 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  margin-right: 5%;
+  margin-right: 3%;
   margin-bottom: 2%;
   background-color: white;
   display: flex;
